# tarsmith

./: Cargo.toml  LICENSE  README.md
src/: main  main.rs
tests/: cli.rs  cli_error.rs  desktop_entry.rs  install_success.rs  path_symlink.rs
