[package]
name = "tarsmith"
version = "0.4.1"
edition = "2024"
license = "MIT"
authors = ["sharifmdathar"]
description = "A simple, interactive installer for tar archives"
repository = "https://github.com/sharifmdathar/tarsmith"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
